[tool.poetry]
name = "bullet-dodge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bullet_dodge"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
